--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                 <div class="row g-4">
                     <div class="col-md-6 col-lg-4">
                         <div class="card h-100 shadow service-card">
-                            <img src="images/Home/Corporate%20Events%20Hero%20Image.jpg" class="card-img-top" alt="Corporate event planning and production services in Perth and Western Australia" loading="lazy" decoding="async" width="1600" height="900" sizes="(max-width: 576px) 100vw, (max-width: 992px) 50vw, 33vw" srcset="images/Home/Corporate%20Events%20Hero%20Image-480w.jpg 480w, images/Home/Corporate%20Events%20Hero%20Image-768w.jpg 768w, images/Home/Corporate%20Events%20Hero%20Image-1200w.jpg 1200w, images/Home/Corporate%20Events%20Hero%20Image.jpg 1600w">
+                            <img src="images/Home/Corporate Events Hero Image.jpg" class="card-img-top" alt="Corporate event planning and production services in Perth and Western Australia" loading="lazy" decoding="async" width="1600" height="900">
                             <div class="card-body text-center">
                                 <h3 class="text-gold mb-3">Corporate Events</h3>
                                 <p class="text-charcoal">One team handles everything—from strategy to execution. No juggling multiple vendors. No coordination headaches.</p>
@@ -452,7 +452,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="card h-100 shadow service-card">
-                            <img src="images/Home/Creative%20Workshops%20Hero%20Image.jpg" class="card-img-top" alt="Creative workshops for kids and adults in Perth and Western Australia" loading="lazy" decoding="async" width="1600" height="900" sizes="(max-width: 576px) 100vw, (max-width: 992px) 50vw, 33vw" srcset="images/Home/Creative%20Workshops%20Hero%20Image-480w.jpg 480w, images/Home/Creative%20Workshops%20Hero%20Image-768w.jpg 768w, images/Home/Creative%20Workshops%20Hero%20Image-1200w.jpg 1200w, images/Home/Creative%20Workshops%20Hero%20Image.jpg 1600w">
+                            <img src="images/Home/Creative Workshops Hero Image.jpg" class="card-img-top" alt="Creative workshops for kids and adults in Perth and Western Australia" loading="lazy" decoding="async" width="1600" height="900">
                             <div class="card-body text-center">
                                 <h3 class="text-gold mb-3">Creative Workshops</h3>
                                 <p class="text-charcoal">Designed and delivered in-house. No external facilitators to brief. Consistent quality, aligned with your brand.</p>
@@ -462,7 +462,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="card h-100 shadow service-card">
-                            <img src="images/Home/Custom%20Displays%20Hero%20Image.jpg" class="card-img-top" alt="Custom displays and installations for events in Perth and Western Australia" loading="lazy" decoding="async" width="1600" height="900" sizes="(max-width: 576px) 100vw, (max-width: 992px) 50vw, 33vw" srcset="images/Home/Custom%20Displays%20Hero%20Image-480w.jpg 480w, images/Home/Custom%20Displays%20Hero%20Image-768w.jpg 768w, images/Home/Custom%20Displays%20Hero%20Image-1200w.jpg 1200w, images/Home/Custom%20Displays%20Hero%20Image.jpg 1600w">
+                            <img src="images/Home/Custom Displays Hero Image.jpg" class="card-img-top" alt="Custom displays and installations for events in Perth and Western Australia" loading="lazy" decoding="async" width="1600" height="900">
                             <div class="card-body text-center">
                                 <h3 class="text-gold mb-3">Custom Displays</h3>
                                 <p class="text-charcoal">Engineered and built locally. No shipping delays. No assembly surprises. One team, one vision, delivered on time.</p>
@@ -780,7 +780,7 @@
                                      alt="Centuria Capital logo" 
                                      class="testimonial-img testimonial-img-rectangular mb-4" width="200" height="50" loading="lazy" decoding="async">
                                 <h3 class="testimonial-name">Val Neal</h3>
-                                <p class="testimonial-position mb-3">Customer Service Manager, One Forty St Georges</p>
+                                <p class="testimonial-position mb-3">Property Manager, One Forty St Georges</p>
                                 <div class="testimonial-content p-4 rounded">
                                     <p class="mb-0">"We couldn't have done it without you. Everyone loved the concept."</p>
                                 </div>
@@ -798,6 +798,18 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="carousel-item text-center">
+                            <div class="testimonial-item">
+                                <img src="images/Testimonials/testimonial-2.png" 
+                                     alt="Centuria Capital logo" 
+                                     class="testimonial-img testimonial-img-rectangular mb-4" width="200" height="50" loading="lazy" decoding="async">
+                                <h3 class="testimonial-name">Caitlin Comiskey</h3>
+                                <p class="testimonial-position mb-3">Property Manager, One Forty St Georges</p>
+                                <div class="testimonial-content p-4 rounded">
+                                    <p class="mb-0">"Working with Bloom'n Events throughout 2025 — from the 50th Anniversary Gala to the Connect 140 activation, and everything in between — it has been an absolute pleasure. Tamara and the team consistently deliver above and beyond, bringing creativity, professionalism, and seamless coordination to every project. From early planning and artwork preparation to executing flawless event styling, run sheets, and on‑the‑day management, their attention to detail is exceptional. Their ability to understand our vision, elevate it, and manage complex logistics with ease made every collaboration feel effortless. Bloom'n Events has played a huge part in delivering some of our building's most memorable moments. We couldn't recommend them more highly and look forward to continuing our partnership in 2026."</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -811,6 +823,7 @@
                         <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Testimonial 1"></button>
                         <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="1" aria-label="Testimonial 2"></button>
                         <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="2" aria-label="Testimonial 3"></button>
+                        <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="3" aria-label="Testimonial 4"></button>
                     </div>
                 </div>
             </div>
