--- a/case-study-hawaiian-forrestfield.html
+++ b/case-study-hawaiian-forrestfield.html
@@ -444,6 +444,20 @@
                                     <div class="success-stories-carousel-card" data-index="0">
                                         <div class="card h-100 shadow">
                                             <img src="images/Centuria Connect140/Connect140 (10).JPG" class="card-img-top" alt="Centuria Connect140 Networking Event" loading="lazy" decoding="async" width="1600" height="900">
+                                            <div class="portfolio-card-metadata">
+                                                <div class="portfolio-card-metadata-item">
+                                                    <i class="bi bi-building"></i>
+                                                    <span>Centuria Capital</span>
+                                                </div>
+                                                <div class="portfolio-card-metadata-item">
+                                                    <i class="bi bi-geo-alt"></i>
+                                                    <span>Perth CBD</span>
+                                                </div>
+                                                <div class="portfolio-card-metadata-item">
+                                                    <i class="bi bi-calendar-event"></i>
+                                                    <span>Corporate Networking</span>
+                                                </div>
+                                            </div>
                                             <div class="card-body text-center">
                                                 <h3 class="card-title text-gold mb-3">Corporate Networking Event Delivers Meaningful Connections</h3>
                                                 <p class="card-text text-charcoal">How we created an engaging atmosphere for Centuria Capital that naturally facilitated meaningful conversations among Perth business professionals.</p>
@@ -454,6 +468,20 @@
                                     <div class="success-stories-carousel-card" data-index="1">
                                         <div class="card h-100 shadow">
                                             <img src="images/Home/Food Festival Celebrates Tenant Opening & Drives Engagement CASE STUDY IMAGE.jpg" class="card-img-top" alt="Hawaiian Forrestfield Food Festival" loading="lazy" decoding="async" width="1600" height="900">
+                                            <div class="portfolio-card-metadata">
+                                                <div class="portfolio-card-metadata-item">
+                                                    <i class="bi bi-building"></i>
+                                                    <span>Hawaiian Shopping Centres</span>
+                                                </div>
+                                                <div class="portfolio-card-metadata-item">
+                                                    <i class="bi bi-geo-alt"></i>
+                                                    <span>Forrestfield</span>
+                                                </div>
+                                                <div class="portfolio-card-metadata-item">
+                                                    <i class="bi bi-calendar-event"></i>
+                                                    <span>Food Festival</span>
+                                                </div>
+                                            </div>
                                             <div class="card-body text-center">
                                                 <h3 class="card-title text-gold mb-3">Food Festival Celebrates Tenant Opening & Drives Engagement</h3>
                                                 <p class="card-text text-charcoal">One-day event for Hawaiian Shopping Centres that celebrated a key tenant opening while showcasing food diversity and driving community engagement.</p>
@@ -464,6 +492,20 @@
                                     <div class="success-stories-carousel-card" data-index="2">
                                         <div class="card h-100 shadow">
                                             <img src="images/Home/School Holiday Activity Drives Traffic Across 5 Centres in 5 Days CASE STUDY IMAGE.jpg" class="card-img-top" alt="Hawaiian Neighbourhood Nibbles School Holiday Programme" loading="lazy" decoding="async" width="1600" height="900">
+                                            <div class="portfolio-card-metadata">
+                                                <div class="portfolio-card-metadata-item">
+                                                    <i class="bi bi-building"></i>
+                                                    <span>Hawaiian Shopping Centres</span>
+                                                </div>
+                                                <div class="portfolio-card-metadata-item">
+                                                    <i class="bi bi-geo-alt"></i>
+                                                    <span>Multiple Locations</span>
+                                                </div>
+                                                <div class="portfolio-card-metadata-item">
+                                                    <i class="bi bi-calendar-event"></i>
+                                                    <span>School Holiday Programme</span>
+                                                </div>
+                                            </div>
                                             <div class="card-body text-center">
                                                 <h3 class="card-title text-gold mb-3">School Holiday Programme Drives Traffic Across 5 Centres in 5 Days</h3>
                                                 <p class="card-text text-charcoal">Food-based July school holiday activity across seven Hawaiian shopping centres that drove traffic uplifts and encouraged family dwell time.</p>
@@ -474,6 +516,20 @@
                                     <div class="success-stories-carousel-card" data-index="3">
                                         <div class="card h-100 shadow">
                                             <img src="images/Centuria 50th Birthday/efea378d-9bd1-4906-9237-db1ed574869c.jpg" class="card-img-top" alt="140 St Georges Terrace 50th Birthday Celebration" loading="lazy" decoding="async" width="1600" height="900">
+                                            <div class="portfolio-card-metadata">
+                                                <div class="portfolio-card-metadata-item">
+                                                    <i class="bi bi-building"></i>
+                                                    <span>Centuria Capital</span>
+                                                </div>
+                                                <div class="portfolio-card-metadata-item">
+                                                    <i class="bi bi-geo-alt"></i>
+                                                    <span>140 St Georges Terrace</span>
+                                                </div>
+                                                <div class="portfolio-card-metadata-item">
+                                                    <i class="bi bi-calendar-event"></i>
+                                                    <span>50th Anniversary</span>
+                                                </div>
+                                            </div>
                                             <div class="card-body text-center">
                                                 <h3 class="card-title text-gold mb-3">Landmark Anniversary Event Honours Legacy and Signals Future</h3>
                                                 <p class="card-text text-charcoal">Bespoke 50th Birthday Celebration for 140 St Georges Terrace that honoured the building's legacy while presenting it as contemporary and future-focused.</p>
@@ -484,6 +540,20 @@
                                     <div class="success-stories-carousel-card" data-index="4">
                                         <div class="card h-100 shadow">
                                             <img src="images/Centuria Breast Cancer/Centuria Breast Cancer Oct25.1.jpg" class="card-img-top" alt="Breast Cancer Awareness Day & Spring Activation" loading="lazy" decoding="async" width="1600" height="900">
+                                            <div class="portfolio-card-metadata">
+                                                <div class="portfolio-card-metadata-item">
+                                                    <i class="bi bi-building"></i>
+                                                    <span>Centuria Capital</span>
+                                                </div>
+                                                <div class="portfolio-card-metadata-item">
+                                                    <i class="bi bi-geo-alt"></i>
+                                                    <span>140 St Georges Terrace</span>
+                                                </div>
+                                                <div class="portfolio-card-metadata-item">
+                                                    <i class="bi bi-calendar-event"></i>
+                                                    <span>Purpose-Led Installation</span>
+                                                </div>
+                                            </div>
                                             <div class="card-body text-center">
                                                 <h3 class="card-title text-gold mb-3">Purpose-Led Installation Creates Meaningful Connection</h3>
                                                 <p class="card-text text-charcoal">Two-phase evolving installation honouring Breast Cancer Awareness Day while transitioning into a vibrant Spring activation at 140 St Georges Terrace.</p>
