--- a/index.html
+++ b/index.html
@@ -897,7 +897,9 @@
                 
                 <!-- Logo in Center -->
                 <div class="col-3 text-center footer-column order-md-2">
-                    <img src="assets/images/logo-blk.png" alt="Bloom'n Events Co Logo" class="img-fluid footer-logo mb-3" loading="lazy" decoding="async">
+                    <a href="index.html" aria-label="Home">
+                        <img src="assets/images/logo-blk.png" alt="Bloom'n Events Co Logo" class="img-fluid footer-logo mb-3" loading="lazy" decoding="async">
+                    </a>
                     <p class="text-gold fw-light small mb-0">
                         <a href="tandcs.html" class="text-gold text-decoration-none">Terms & Conditions</a>  |  <a href="policies.html" class="text-gold text-decoration-none">Company Policies</a>  |  Copyright &copy; <span id="current-year"></span> Bloom'n Events Co Pty Ltd. All rights reserved.
                     </p>
